--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,30 @@
   text-align: center;
 }
 
+@font-face {
+  font-family: 'KronaOne-Regular';
+  src: local('KronaOne-Regular'), url(./fonts/KronaOne-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'CormorantGaramond-Regular';
+  src: local('CormorantGaramond-Regular'), url(./fonts/CormorantGaramond-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Gotu-Regular';
+  src: local('Gotu-Regular'), url(./fonts/Gotu-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'YesevaOne-Regular';
+  src: local('YesevaOne-Regular'), url(./fonts/YesevaOne-Regular.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'WorkSans-Regular';
+  src: local('WorkSans-Regular'), url(./fonts/WorkSans-Regular.ttf) format('truetype');
+}
+
+
 
