--- a/src/App.css
+++ b/src/App.css
@@ -50,4 +50,12 @@ aside {
   justify-content: space-around;
 }
 
+footer {
+  padding: 20px;
+  height: 40px;
+  justify-content: center;
+  background-color: rgb(23, 46, 30);
+  color: rgba(220, 220, 221);
+}
+
 
