Css grid-layout for content div

--- a/src/App.css
+++ b/src/App.css
@@ -90,4 +90,12 @@ footer {
   gap: 3rem;
 }
 
+.content {
+  height: 100%;
+  display: grid;
+  grid-template-areas: 'info myphoto'
+                        'exp expdiag'
+                        'pf .';
+}
+
 
