--- a/src/App.css
+++ b/src/App.css
@@ -59,12 +59,13 @@ footer {
 }
 
 .nav {
+  font-family: 'YesevaOne-Regular';
+  text-decoration: none;
   position: sticky;
   align-self: flex-start;
   top: 0;
   background-color: rgba(68, 89, 77);
   height: 70px;
-  color: rgba(220, 220, 221);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -73,13 +74,18 @@ footer {
 }
 
 .title {
-  font-size: 40px;
+  font-size: 30px;
+  color: inherit;
+}
+
+.nav a {
+  color: inherit;
 }
 
 .nav a:hover {
   border-style: groove;
   box-shadow: inset 300px 0 0 0 rgba(220, 220, 221);
-  color: rgb(33, 38, 45);
+  color: rgb(53, 104, 65);
 }
 
 .nav ul {
@@ -91,7 +97,8 @@ footer {
 }
 
 .content {
-  height: 100%;
+  height: fit-content;
+  max-width: fit-content;
   display: grid;
   grid-template-areas: 'info myphoto'
                         'exp expdiag'
@@ -101,15 +108,24 @@ footer {
 #info {
   border-style: solid;
   grid-area: info;
-  max-width: 800px;
-  height: 400px;
+  width: 800px;
+  height: auto;
 }
 
 #photo {
-  border-style: solid;
   grid-area: myphoto;
-  justify-content: center;
-  align-content: right;
+}
+
+.portrait {
+  display: block;
+  max-width: 80%;
+  height: auto;
+  border-radius:60%;
+  border-style: double;
+  border-width: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  border-color: rgba(68, 89, 77)
 }
 
 #work {
