--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 
 h1 {
   font-family: 'YesevaOne-Regular';
-  color:steelblue
+  color: rgb(13, 57, 34);
 }
 
 body {
@@ -58,9 +58,11 @@ aside {
 }
 
 footer {
+  display: flex;
   padding: 20px;
   height: 40px;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   background-color: rgb(23, 46, 30);
   color: rgba(220, 220, 221);
 }
@@ -68,6 +70,7 @@ footer {
 .nav {
   font-family: 'YesevaOne-Regular';
   text-decoration: none;
+  color: rgb(11, 48, 29);
   position: sticky;
   align-self: flex-start;
   top: 0;
@@ -95,6 +98,15 @@ footer {
   color: rgb(53, 104, 65);
 }
 
+.footer ul {
+  padding: 2rem;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 3rem;
+  font-size: 10px;
+}
+
 .nav ul {
   padding: 2rem;
   margin: 0;
@@ -114,26 +126,27 @@ footer {
 }
 
 #info {
-  margin-top: 25px;
+  margin-top: 60px;
   grid-area: info;
   width: 800px;
   height: auto;
 }
 
 #photo {
+  margin-top: 40px;
   grid-area: myphoto;
 }
 
 .portrait {
   display: block;
-  max-width: 90%;
+  max-width: 80%;
   height: auto;
   border-radius:60%;
   border-style: double;
   border-width: 0.5rem;
   margin-left: auto;
   margin-right: auto;
-  border-color: steelblue;
+  border-color: rgba(11, 48, 29);
 }
 
 #work {
