--- a/src/App.css
+++ b/src/App.css
@@ -98,13 +98,19 @@ footer {
   color: rgb(53, 104, 65);
 }
 
-.footer ul {
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer a {
   padding: 2rem;
   margin: 0;
   list-style: none;
   display: flex;
   gap: 3rem;
   font-size: 10px;
+  color: inherit;
 }
 
 .nav ul {
